clusters/main/kubernetes/system/longhorn/app/external-share-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-external-share-manager
  namespace: longhorn-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app: longhorn-external-share-manager
  template:
    metadata:
      labels:
        app: longhorn-external-share-manager
    spec:
      serviceAccountName: longhorn-external-share-manager
      containers:
        - name: longhorn-external-share-manager
          imagePullPolicy: Always
          image: ysakashita/longhorn-external-share-manager:v0.1.3
          args: [ "-zap-encoder=console", "-zap-time-encoding=iso8601" ]
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9440
            initialDelaySeconds: 10
