clusters/main/kubernetes/system/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: le-prod
    cert-manager.io/private-key-rotation-policy: Always
    # add auth
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: 'http://${AUTHELIA_DNS_NAME}/api/verify'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.${DOMAIN_0}?rm=$request_method'
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
    # homepage integration
    gethomepage.dev/description: Cloud-Native distributed storage built on and for Kubernetes.
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/href: https://longhorn.${DOMAIN_BASE}/
    gethomepage.dev/icon: longhorn.svg
    gethomepage.dev/name: Longhorn
    gethomepage.dev/pod-selector: app.kubernetes.io/instance=longhorn
spec:
  ingressClassName: "external"
  rules:
    - host: longhorn.${DOMAIN_BASE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.${DOMAIN_BASE}
      secretName: longhorn-system-longhorn
